<resources>
    <string name="app_name">积木家</string>
    <string name="signIn_fail_msg">应用初始化参数失败，签到失败，最终会影响扫码支付，订单查询等业务功能，请联系技术人员！</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">最近更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_nomore">没有更多</string>


    <string name="unknown">未知</string>


    <string name="waiting_payment">待收款</string>
    <string name="part_payment">部分收款</string>
    <string name="completed_ayment">已收款</string>

    <string name="payment_success">收款成功</string>
    <string name="payment_fail">收款失败</string>
    <string name="refund_success">退款成功</string>


    <string name="pay_order_id">收款单号：%1$s</string>
    <string name="customer_name">用户姓名</string>
    <string name="customer_phone">用户电话</string>
    <string name="decorate_address">客户地址</string>
    <string name="product_name">套餐名称</string>
    <string name="debt_mount">￥0.00</string>
    <string name="order_time">2019-10-08</string>

    <string name="payment_order_id">订单号：%1$s</string>
    <string name="trade_time">2019-08-21 10:21:21</string>
    <string name="trade_amount">￥%1$s</string>
    <string name="trade_status">支付成功</string>


    <string name="refund_qrcode">退款条码</string>
    <string name="refund_amount">退款金额</string>


    <string name="debt_amount">待支付总金额</string>
    <string name="refund_hint_msg">注：仅支持全额退款，支付宝、微信原路返回，刷卡支付必须现场刷卡才能退款</string>
</resources>
