<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white_ffffff"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >
        <LinearLayout
            android:id="@+id/pay_order_list_item_layoutPayOrderStatus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            >
            <TextView
                android:id="@+id/pay_order_list_item_tvPayOrderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_success"
                android:textSize="@dimen/TextSize16"
                android:textColor="@color/yellow_e59623"
                android:layout_centerVertical="true"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/more_icon"
                android:layout_marginLeft="7dp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/pay_order_list_item_tvReceiptTypeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="@dimen/TextSize16"
            android:textColor="@color/black_091625"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:layout_toLeftOf="@id/pay_order_list_item_layoutPayOrderStatus"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            />
    </RelativeLayout>
    <View style="@style/divider_line1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/pay_order_list_item_tvTradeAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trade_amount"
                android:textSize="@dimen/TextSize18"
                android:textColor="@color/red_F10000"
                android:layout_alignParentRight="true"
                />
            <TextView
                android:id="@+id/pay_order_list_item_tvCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:textSize="@dimen/TextSize16"
                android:textColor="@color/black_091625"
                android:gravity="center_vertical"
                />
            <TextView
                android:id="@+id/pay_order_list_item_tvCustomerPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/TextSize16"
                android:textColor="@color/black_091625"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/pay_order_list_item_tvCustomerName"
                android:layout_marginLeft="10dp"
                />

        </RelativeLayout>
        <TextView
            android:id="@+id/pay_order_list_item_tvDecorateAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decorate_address"
            android:textSize="@dimen/TextSize16"
            android:textColor="@color/black_091625"
            android:gravity="center_vertical"
            android:layout_marginTop="13dp"
            />
        <TextView
            android:id="@+id/pay_order_list_item_tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="@dimen/TextSize16"
            android:textColor="@color/black_091625"
            android:gravity="center_vertical"
            android:layout_marginTop="13dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            >
            <TextView
                android:id="@+id/pay_order_list_item_tvOrderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_time"
                android:textSize="@dimen/TextSize12"
                android:textColor="@color/grey_83869F"
                android:layout_centerVertical="true"
                android:layout_alignParentBottom="true"
                />
            <ImageView
                android:id="@+id/pay_order_list_item_imgTradeType"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/wxin_log_icon"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
